Bug 251048 - KOrganizer Reminder Daemon Crashes upon Suspending a Reminder
Summary: KOrganizer Reminder Daemon Crashes upon Suspending a Reminder
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: reminder daemon (korgac) [CLOSED: Use Reminder Daemon product] (other bugs)
Version First Reported In: 0.9
Platform: Mandriva RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-13 10:03 UTC by Shlomi Fish
Modified: 2010-09-18 19:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shlomi Fish 2010-09-13 10:03:40 UTC
Application: korgac (0.9)
KDE Platform Version: 4.5.67 (4.6 >= 20100901)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-pf7 i686
Distribution: "Mandriva Linux 2010.1"

-- Information about the crash:
- What I was doing when the application crashed:

I suspended a reminder. This happens with both the Mandriva Cooker version of the korganizer (from KDE 4) and one I compiled into a prefix ( /opt/kde4-trunk) from svn trunk.

The crash can be reproduced every time.

-- Backtrace:
Application: KOrganizer Reminder Daemon (korgac), signal: Aborted
[KCrash Handler]
#7  0xb779e424 in __kernel_vsyscall ()
#8  0xb5b3ea81 in raise () from /lib/i686/libc.so.6
#9  0xb5b403d2 in abort () from /lib/i686/libc.so.6
#10 0xb5dc774a in qt_message_output(QtMsgType, char const*) () from /usr/lib/libQtCore.so.4
#11 0xb5dc794f in ?? () from /usr/lib/libQtCore.so.4
#12 0xb5dc7a68 in qFatal(char const*, ...) () from /usr/lib/libQtCore.so.4
#13 0xb5dc7af5 in qt_assert(char const*, char const*, int) () from /usr/lib/libQtCore.so.4
#14 0x0805d217 in QList<QTreeWidgetItem*>::first (this=0xbfbdd15c) at /usr/lib/qt4/include/QtCore/qlist.h:269
#15 0x080579b5 in AlarmDialog::showDetails (this=0x898edf8) at /usr/src/debug/kdepim-4.5.67svn1170578/korganizer/korgac/alarmdialog.cpp:836
#16 0x0805838c in AlarmDialog::qt_metacall (this=0x898edf8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfbdd23c)
    at /usr/src/debug/kdepim-4.5.67svn1170578/build/korganizer/korgac/alarmdialog.moc:109
#17 0xb5ed293d in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#18 0xb5ee214c in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#19 0xb6a92675 in QTreeWidget::itemSelectionChanged() () from /usr/lib/libQtGui.so.4
#20 0xb6a96004 in ?? () from /usr/lib/libQtGui.so.4
#21 0xb6a9b742 in QTreeWidget::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtGui.so.4
#22 0xb5ed293d in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#23 0xb5ee214c in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#24 0xb6a6d83d in QItemSelectionModel::selectionChanged(QItemSelection const&, QItemSelection const&) () from /usr/lib/libQtGui.so.4
#25 0xb6a747d3 in QItemSelectionModel::emitSelectionChanged(QItemSelection const&, QItemSelection const&) () from /usr/lib/libQtGui.so.4
#26 0xb6a74a48 in QItemSelectionModel::select(QItemSelection const&, QFlags<QItemSelectionModel::SelectionFlag>) () from /usr/lib/libQtGui.so.4
#27 0xb6a6f7e6 in QItemSelectionModel::select(QModelIndex const&, QFlags<QItemSelectionModel::SelectionFlag>) () from /usr/lib/libQtGui.so.4
#28 0xb6a93d78 in QTreeWidget::setItemSelected(QTreeWidgetItem const*, bool) () from /usr/lib/libQtGui.so.4
#29 0x0805a4d6 in QTreeWidgetItem::setSelected (this=0x8ac0f28, aselect=false) at /usr/lib/qt4/include/QtGui/qtreewidget.h:397
#30 0x08057c42 in AlarmDialog::suspend (this=0x898edf8) at /usr/src/debug/kdepim-4.5.67svn1170578/korganizer/korgac/alarmdialog.cpp:525
#31 0x08058254 in AlarmDialog::qt_metacall (this=0x898edf8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfbdd69c)
    at /usr/src/debug/kdepim-4.5.67svn1170578/build/korganizer/korgac/alarmdialog.moc:96
#32 0xb5ed293d in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#33 0xb5ee214c in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#34 0xb738a195 in KDialog::okClicked() () from /usr/lib/libkdeui.so.5
#35 0xb738b8f8 in KDialog::slotButtonClicked(int) () from /usr/lib/libkdeui.so.5
#36 0xb738c10b in KDialog::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
#37 0x08058203 in AlarmDialog::qt_metacall (this=0x898edf8, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfbdd868)
    at /usr/src/debug/kdepim-4.5.67svn1170578/build/korganizer/korgac/alarmdialog.moc:90
#38 0xb5ed293d in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#39 0xb5ee214c in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#40 0xb5ee7105 in QSignalMapper::mapped(int) () from /usr/lib/libQtCore.so.4
#41 0xb5ee7252 in QSignalMapper::map(QObject*) () from /usr/lib/libQtCore.so.4
#42 0xb5ee740e in QSignalMapper::map() () from /usr/lib/libQtCore.so.4
#43 0xb5ee7960 in QSignalMapper::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#44 0xb5ed293d in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#45 0xb5ee214c in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#46 0xb6b9261d in QAbstractButton::clicked(bool) () from /usr/lib/libQtGui.so.4
#47 0xb688e7ed in ?? () from /usr/lib/libQtGui.so.4
#48 0xb68900db in ?? () from /usr/lib/libQtGui.so.4
#49 0xb6890396 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#50 0xb64ccc70 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#51 0xb688f3a0 in QAbstractButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#52 0xb6931688 in QPushButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#53 0xb6471a54 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#54 0xb64773e0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#55 0xb7436488 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#56 0xb5ecc1be in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#57 0xb6472afc in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#58 0xb64fd65c in ?? () from /usr/lib/libQtGui.so.4
#59 0xb64fc81e in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#60 0xb65268d0 in ?? () from /usr/lib/libQtGui.so.4
#61 0xb4eadff9 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#62 0xb4eae800 in ?? () from /usr/lib/libglib-2.0.so.0
#63 0xb4eaeaba in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#64 0xb5efabdb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#65 0xb65264ca in ?? () from /usr/lib/libQtGui.so.4
#66 0xb5ecb3cd in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#67 0xb5ecb649 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#68 0xb5ed0120 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#69 0xb646f7b4 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#70 0x08052e1b in main (argc=) at /usr/src/debug/kdepim-4.5.67svn1170578/korganizer/korgac/korgacmain.cpp:85

Reported using DrKonqi
Comment 1 Sergio Martins 2010-09-18 19:10:49 UTC
SVN commit 1176778 by smartins:

Don't crash if there aren't any selected items.

BUG: 251048

 M  +1 -1      alarmdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1176778