Don't crash if there aren't any selected items.

BUG: 251048

svn path=/trunk/KDE/kdepim/korganizer/; revision=1176778